# AnkiPy

./: .travis.yml  README.md  pyproject.toml
AnkiPy/: __init__.py  app.py  defaults.json
AnkiPy/tools/: defaults.py
tests/: test_app.py
